--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
+registrate_version = MC1.21-1.3.0+62
+ponder_version = 1.0.56
+
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=true
