--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
-registrate_version = MC1.21-1.3.0+62
-ponder_version = 1.0.56
 
+create_version = 6.0.4-53
+ponder_version = 1.0.46
+flywheel_version = 1.0.2
+registrate_version = MC1.21-1.3.0+62
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=true
